--- a/src/FindAStore.css
+++ b/src/FindAStore.css
@@ -2,3 +2,10 @@
     display: flex;
     align-items: center;
 }
+
+.findastore p {
+    margin: 0 15px;
+    font-family: SoDoSans;
+    font-weight: 600;
+    font-size: .85rem;
+}
