--- a/src/Body.css
+++ b/src/Body.css
@@ -1,3 +1,19 @@
 .body {
     margin-top: 75px;
 }
+
+.terms {
+    width: 50%;
+    margin: 25px auto;
+}
+
+.terms p {
+    text-align: center;
+    font-weight: 300;
+    line-height: 1.5rem;
+    font-size: 0.9rem;
+}
+
+.terms a {
+    color: black;
+}
