--- a/src/RewardsSection.css
+++ b/src/RewardsSection.css
@@ -36,10 +36,11 @@
 .rewards-section__info button {
     background-color: #d4e9e2;
     height: 35px;
+    margin-top: 15px;
     padding: 0 10px;
     border-radius: 17px;
     font-family: SoDoSans;
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 600;
     border-width: 0.5px;
 }
